--- a/html/cv.html
+++ b/html/cv.html
@@ -6,246 +6,198 @@
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="header">
-    <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
-    <br>
-    <div id="profession-links">
-        <span id="profession"> Électricien / câbleur  </span>
-    <div id="links">
-        <a id="link-main" href="../index.html" target="_self">Principal</a>
-        <a id="link-cv" href="cv.html" target="_self">CV</a>
-        <a id="link-work" href="work.html" target="_self">Mes travaux</a>
-        <a id="link-contact" href="contact.html" target="_self">Me contacter</a>
-    </div>
-    </div>
-</div>
 
-    <div id="cv-intro">
-        <div id="my-photo-cv">
+<header>
+    <div id="header">
+        <div id="name-surname-age"> <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
         </div>
-        <div id="cv-contact"> <div id="cv-green">CV</div> <br> <br>
-            <span id="name-cv">Mykhailo Taranenko</span> <br> <br>
-            <span class="adress"> 2 rue Charles de Foucauld</span>    <br>
-            <span class="adress"> 37200, Tours</span> <br> <br>
-            <span class="cv-mail-tel">  E-mail: mikael.tar@outlook.com     </span> <br>
-            <span class="cv-mail-tel">  Tel: 07 53 51 52 21       </span> <br>
-                <div id="cv-links">
-                 <div id="cv-link-linkedin"> <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a> </div>
-                 <div id="cv-link-twitter">  <a href="https://twitter.com/Mike67553859"> <img id="img-twitter" src="../images/twitter.png" alt="twitter">   </a> </div>
-                </div>
-            <div class="cv-download"> <a href="../images/CV-Taranenko.pdf" target="_blank">Télécharger le CV</a> </div>
+        <div id="profession-links">
+            <span id="profession">Électricien / câbleur </span>
+            <div id="links">
+                 <a class="links-header" href="../index.html" target="_self">Principal</a>
+                 <a class="links-header" href="cv.html" target="_self">CV</a>
+                 <a class="links-header" href="work.html" target="_self">Mes travaux</a>
+                 <a class="links-header" href="contact.html" target="_self">Me contacter</a>
+            </div>
         </div>
     </div>
-
-
-
-<div id="cv-right-block">
-    <span class="cv-headers">Permis</span>
-        <hr>
-
-        <div class="work-place"> Permis B </div>
-        <br>
-        <br>
-    <span class="cv-headers">Langues</span>
-        <hr>
-
-        <div class="work-place"> Français </div>
-    B2/C1
-    <br>
-    <div class="work-place"> Anglais </div>
-    A2/B1
-        <br>
-        <br>
-<span class="cv-headers">Compétences</span>
-        <hr>
-        Autonomie
-    <progress max="100" value="100"> </progress>
-        <br><br>
-        Savoir lire un plan/ une schéma
-    <br>
-    <progress max="100" value="100"> </progress>
-        <br><br>
-        Fixer et raccorder les equipement basse ténsion
-    <progress max="100" value="100"> </progress>
-        <br><br>
-        Positionner en cabler une armoire électrique ou un tableau
-    <br>
-    <progress max="100" value="100"> </progress>
-        <br><br>
-        Positionner en cabler une armoire électrique industrielle
-    <progress max="100" value="90"> </progress>
-        <br><br>
-        Raccorder des càbles d'équipement électriques industrielles
-    <progress max="100" value="90"> </progress>
-        <br><br>
-        Chemin de càbles et conduits électriques
-    <progress max="100" value="95"> </progress>
-        <br><br>
-        Realiser des saignées ou des supports pour les càbles
-    <progress max="100" value="100"> </progress>
-        <br><br>
-        Installer et raccorder des équipement TBT
-    <progress max="100" value="95"> </progress>
-        <br><br>
-        Utilisation d'appareils de mesures électriques
-    <progress max="100" value="100"> </progress>
-        <br><br>
-        Effectuer des travaux simple en maçonnerie
-    <progress max="100" value="70"> </progress>
-
-
-
-
-
-
-
-
-
-
-
+</header>
+<div id="cv-intro">
+    <div id="cv-intro-block-left">
+        <div id="cv-text">CV</div>
+        <div id="cv-name-text">Mykhailo Taranenko</div>
+        <div id="cv-adress-text"> 2 rue Charles de Foucauld, <br> 37200, Tours</div>
+        <div id="cv-tel-mail-text">E-mail: mikael.tar@outlook.com <br>Tel: 07 53 51 52 21</div>
+        <div id="cv-images-links">
+            <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="contact-img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a>
+            <a href="https://twitter.com/Mike67553859"> <img id="contact-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
+        </div>
+        <div id="telecharger"> <a id="link-cv-pdf" href="../images/CV-Taranenko.pdf" target="_blank">Télecharger le CV </a> </div>
+    </div> <img id="cv-intro-photo" src="../images/photo2.png" alt="my-photo">
 </div>
 
-
-
-
-
-
-
-    <div id="list-cv">
-        <span class="cv-headers">Expériences professionnelles</span>
+<div id="cv-work-formation">
+<div class="cv-headers">Expériences professionnelles</div>
         <hr>
 
         <div class="work-place"> Eiffage </div>
         <div class="time">Novembre 2020 - temps present </div>
-        Electricien du batiment/ renovation. Renovation électrique (rue Emile Zola / Tours centre)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ renovation. Renovation électrique (rue Emile Zola / Tours centre)</div>
+
 
         <div class="work-place"> Ineo </div>
         <div class="time">Mai 2020 - Septembre 2020 </div>
-        Electricien du batiment/ tertiaire. Construction d'un hotel 4* (Hotel Hilton(est) / Tours centre)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ tertiaire. Construction d'un hotel 4* (Hotel Hilton(est) / Tours centre)</div>
+
+
 
         <div class="work-place"> Cegelec </div>
         <div class="time">Janvier 2020 - Mai 2020 </div>
-        Electricien du batiment/ tertiaire. Construction des bureaux (Bàtiments Hermoine/2 lions)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ tertiaire. Construction des bureaux (Bàtiments Hermoine/2 lions)</div>
+
 
         <div class="work-place"> SPIE </div>
         <div class="time">Juillet 2019 - Janvier 2020 </div>
-        Electricien du batiment/ tertiaire, depannage. Divers interventions dans les lycées de la region (Centre)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ tertiaire, depannage. Divers interventions dans les lycées de la region (Centre)</div>
+
 
         <div class="work-place"> EC </div>
         <div class="time">Juillet 2018 - Juillet 2019 </div>
-        Electricien du batiment/ résidentiel. Construction des bàtiments étudiants ( rue Emile Aron / 2 lions)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ résidentiel. Construction des bàtiments étudiants ( rue Emile Aron / 2 lions)</div>
+
 
         <div class="work-place"> E.G.C.F. </div>
         <div class="time">Juin 2018 - Juin 2018 </div>
-        Electricien du batiment/ renovation. Renovation d'une pharmacie (Chateau-du-Loir)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ renovation. Renovation d'une pharmacie (Chateau-du-Loir)</div>
+
 
         <div class="work-place"> EIFFAGE </div>
         <div class="time">Avril 2018 - Mai 2018 </div>
-        Electricien du batiment/ tertiaire. Construction des bureaux (Citya/ rue Dr Herpin)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ tertiaire. Construction des bureaux (Citya/ rue Dr Herpin)</div>
+
 
         <div class="work-place"> Katins Sergejs </div>
         <div class="time">Octobre 2017 - Fevrier 2018 </div>
-        Electricien du batiment/ renovation. Renovation électrique (divers chantiers dans les regions Centre/Pays de la Loire)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ renovation. Renovation électrique (divers chantiers dans les regions Centre/Pays de la Loire)</div>
+
 
         <div class="work-place"> Boissinot Elevage </div>
         <div class="time">Aout 2017 - Octobre 2017 </div>
-        Electricien du batiment/ renovation. Construction d'une ferme (Loches)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ renovation. Construction d'une ferme (Loches)</div>
+
 
         <div class="work-place"> Saint-Eloi Fourgere </div>
         <div class="time">Mai 2017 - Juillet 2017 </div>
-        Electricien du batiment/ renovation. Renovation électrique dans un lycée (Loches)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ renovation. Renovation électrique dans un lycée (Loches)</div>
+
 
         <div class="work-place"> Katins Sergejs </div>
         <div class="time">Septembre 2015 - Mars 2017 </div>
-        Electricien du batiment/ renovation. Renovation électrique (divers chantiers dans les regions Centre/Pays de la Loire)
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">Electricien du batiment/ renovation. Renovation électrique (divers chantiers dans les regions Centre/Pays de la Loire)</div>
 
-
-        <span class="cv-headers">Formations</span>
+        <div class="cv-headers">Formations</div>
         <hr>
-<div class="work-place"> Recyclage des habilitations électriques </div>
+
+        <div class="work-place"> Recyclage des habilitations électriques </div>
         <div class="time">Juin 2020 </div>
-         B1V B2V BC BR H0V
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">B1V B2V BC BR H0V</div>
+
         <div class="work-place"> Habilitations électriques </div>
         <div class="time">Juin 2017 </div>
-        B1V B2V BC BR H0V
-        <br>
-        <br>
+        <div class="cv-work-formation-normal-text">B1V B2V BC BR H0V</div>
+
         <div class="work-place"> Formation S.S.T. </div>
         <div class="time">Mai 2015 </div>
+        <div class="cv-work-formation-normal-text"></div>
 
-        <br>
         <div class="work-place"> CAP Preparation et realisation d'ouvrages électriques </div>
         <div class="time">Mai 2015 </div>
-        Delivrée par le lycée Val de Loire. Note moyenne 18/20
-        <br>
-        <br>
-    </div>
-<div class="cv-download-bottom"> <a href="../images/CV-Taranenko.pdf" target="_blank">Télécharger le CV</a> </div>
+        <div class="cv-work-formation-normal-text">Delivrée par le lycée Val de Loire. Note moyenne 18/20</div>
 
-
-<div id="fknfootercv"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div id="footer">
-© 2021 Mykhailo Taranenko
 </div>
-<script src="../scripts/main.js"> </script>
+<div id="permis-langues-competences">
+
+   <div class="cv-headers" >Permis</div>
+        <hr>
+
+        <div class="work-place"> Permis B </div>
+
+        <div class="cv-headers-2">Langues</div>
+        <hr>
+
+        <div class="work-place"> Français </div>
+    <div class="cv-permis-etc-normal-text">B2/C1</div>
+
+    <div class="work-place"> Anglais </div>
+    <div class="cv-permis-etc-normal-text"> A2/B1</div>
+
+<div class="cv-headers-2">Compétences</div>
+        <hr>
+    <div class="cv-permis-etc-normal-text">Autonomie</div>
+    <progress max="100" value="100"> </progress>
+
+    <div class="cv-permis-etc-normal-text">Savoir lire un plan/ une schéma</div>
+    <progress max="100" value="100"> </progress>
+
+    <div class="cv-permis-etc-normal-text"> Fixer et raccorder les equipement basse ténsion</div>
+    <progress max="100" value="100"> </progress>
+
+    <div class="cv-permis-etc-normal-text">Positionner en cabler une armoire électrique ou un tableau</div>
+
+    <progress max="100" value="100"> </progress>
+
+    <div class="cv-permis-etc-normal-text">Positionner en cabler une armoire électrique industrielle</div>
+    <progress max="100" value="90"> </progress>
+
+    <div class="cv-permis-etc-normal-text">Raccorder des càbles d'équipement électriques industrielles</div>
+    <progress max="100" value="90"> </progress>
+
+    <div class="cv-permis-etc-normal-text">  Chemin de càbles et conduits électriques </div>
+    <progress max="100" value="95"> </progress>
+
+    <div class="cv-permis-etc-normal-text"> Realiser des saignées ou des supports pour les càbles </div>
+    <progress max="100" value="100"> </progress>
+
+    <div class="cv-permis-etc-normal-text">  Installer et raccorder des équipement TBT </div>
+    <progress max="100" value="95"> </progress>
+
+    <div class="cv-permis-etc-normal-text"> Utilisation d'appareils de mesures électriques </div>
+    <progress max="100" value="100"> </progress>
+
+    <div class="cv-permis-etc-normal-text">  Effectuer des travaux simple en maçonnerie </div>
+    <progress max="100" value="70"> </progress>
+</div>
+
+<div id="cv-download-footer"> <a id="cv-pdf-footer" href="../images/CV-Taranenko.pdf" target="_blank"> Télecharger le CV</a> </div>
+<div id="fknfooter-cv"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+    <div id="footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
+</footer>
 </body>
 </html>
