--- a/html/contact.html
+++ b/html/contact.html
@@ -6,52 +6,51 @@
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="header">
-    <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
-    <br>
-    <div id="profession-links">
-        <span id="profession"> Électricien / câbleur  </span>
-    <div id="links">
-        <a id="link-main" href="../index.html" target="_self">Principal</a>
-        <a id="link-cv" href="cv.html" target="_self">CV</a>
-        <a id="link-work" href="work.html" target="_self">Mes travaux</a>
-        <a id="link-contact" href="contact.html" target="_self">Me contacter</a>
+
+<header>
+    <div id="header">
+        <div id="name-surname-age"> <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
+        </div>
+        <div id="profession-links">
+            <span id="profession">Électricien / câbleur </span>
+            <div id="links">
+                 <a class="links-header" href="../index.html" target="_self">Principal</a>
+                 <a class="links-header" href="cv.html" target="_self">CV</a>
+                 <a class="links-header" href="work.html" target="_self">Mes travaux</a>
+                 <a class="links-header" href="contact.html" target="_self">Me contacter</a>
+            </div>
+        </div>
     </div>
+</header>
+<article>
+
+
+<div id="contact-contact">
+    <div id="contact-text">Contacts</div>
+    <div id="name-text">Mykhailo Taranenko</div>
+    <div id="adress-text">2 rue Charles de Foucauld, 37200, Tours</div>
+    <div id="mail-tel-text"> E-mail: mikael.tar@outlook.com Tel: 07 53 51 52 21</div>
+    <div id="images-text">
+    <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="contact-img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a>
+
+    <a href="https://twitter.com/Mike67553859"> <img id="contact-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
     </div>
-</div>
-<div id="contact-main">
-
-<div id="contact-contacts"> <div id="cv-green">Contacts</div> <br> <br>
-            <span id="name-cv-contacts">Mykhailo Taranenko</span> <br> <br>
-            <span class="adress"> 2 rue Charles de Foucauld</span>    <br>
-            <span class="adress"> 37200, Tours</span> <br> <br>
-            <span class="cv-mail-tel">  E-mail: mikael.tar@outlook.com     </span> <br>
-            <span class="cv-mail-tel">  Tel: 07 53 51 52 21       </span> <br>
-                <div id="cv-links">
-                 <div id="cv-link-linkedin"> <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a> </div>
-                 <div id="cv-link-twitter">  <a href="https://twitter.com/Mike67553859"> <img id="img-twitter" src="../images/twitter.png" alt="twitter">   </a> </div>
-                </div>
-
 
 </div>
 
 
-
-
-
-    <div id="form">
-        <span id="me-contacter">Me contacter:</span> <br> <br>
+    <div id="form"><div id="me-contacter">Me contacter:</div>
+    <div id="form-form">
         <form action="../php/send.php" method="post">
             <label for="name-contact"></label>
-            <input type="text"   id="name-contact" name = 'name-contact'  maxlength="20" value="" placeholder="Entrez votre nom/prénom" required> <br><br>
+            <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Entrez votre nom/prénom" required> <br><br>
             <label for="contact"></label>
-            <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="20" value="" placeholder="Entrez votre numéro de tel. ou e-mail" required> <br><br>
+            <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Entrez votre numéro de tel. ou e-mail" required> <br><br>
              <label for="comment"></label>
             <textarea  id="comment" name="comment" cols="15" rows="10" placeholder="Commentaire:" required></textarea> <br><br>
             <input id="submit" type="submit" name="submit" value="Envoyer">
         </form>
-
-
+    </div>
 
     </div>
 
@@ -63,7 +62,9 @@
 
 
 
-</div>
+
+
+</article>
 
 
 
@@ -80,18 +81,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-<div id="footer">
-© 2021 Mykhailo Taranenko
-</div>
-<script src="../scripts/main.js"> </script>
+<footer>
+    <div id="footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
+</footer>
 </body>
 </html>
