--- a/html/work.html
+++ b/html/work.html
@@ -6,32 +6,33 @@
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="header">
-    <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
-    <br>
-    <div id="profession-links">
-        <span id="profession"> Électricien / câbleur  </span>
-    <div id="links">
-        <a id="link-main" href="../index.html" target="_self">Principal</a>
-        <a id="link-cv" href="cv.html" target="_self">CV</a>
-        <a id="link-work" href="work.html" target="_self">Mes travaux</a>
-        <a id="link-contact" href="contact.html" target="_self">Me contacter</a>
+
+<header>
+    <div id="header">
+        <div id="name-surname-age"> <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
+        </div>
+        <div id="profession-links">
+            <span id="profession">Électricien / câbleur </span>
+            <div id="links">
+                 <a class="links-header" href="../index.html" target="_self">Principal</a>
+                 <a class="links-header" href="cv.html" target="_self">CV</a>
+                 <a class="links-header" href="work.html" target="_self">Mes travaux</a>
+                 <a class="links-header" href="contact.html" target="_self">Me contacter</a>
+            </div>
+        </div>
     </div>
-    </div>
-</div>
+</header>
+<a href="../images/cegelec-6.png" target="_blank"><img id="her2lions" src="../images/cegelec-6.png" alt="cegelec"> <div id="text-cegelec"> Batiment Hermoine / 2 lions</div></a>
 
+<a href="../images/ec-4.png" target="_blank"> <img id="ec" src="../images/ec-4.png" alt="ec"><div id="text-ec"> Batiment Etudiants / 2 lions</div> </a>
 
-<div id="works">
-    <div id="cegelec"><span class="endroits">Batiment Hermoine / 2 lions</span> </div>
-    <div id="ec"><span class="endroits">Batiment Etudiants / 2 lions</span></div>
-    <div id="ineo"><span class="endroits"> Hotel Hilton(est) / Tours-centre</span></div>
-    <div id="angers"><span class="endroits">Tableau particulier</span></div>
-    <div id="boite"><span class="endroits">Batiment Hermoine / 2 lions</span></div>
-    <div id="baie"><span class="endroits">Conseil Departemental / Fontaines</span></div>
-</div>
+<a href="../images/ineo-2.png" target="_blank"> <img id="ineo" src="../images/ineo-2.png" alt="ineo"> <div id="text-ineo"> Hotel Hilton(est) / Tours</div></a>
 
-<div id="fknfooter"> </div>
+<a href="../images/angers.png" target="_blank"> <img id="particulier" src="../images/angers.png" alt="particulier"><div id="text-particulier"> Tableau particulier</div> </a>
 
+<a href="../images/boites.png" target="_blank"> <img id="boites" src="../images/boites.png" alt="boites"> <div id="text-boites"> Batiment Hermoine / 2 lions</div> </a>
+
+<a href="../images/baie.png" target="_blank"> <img id="baie" src="../images/baie.png" alt="baie"><div id="text-baie"> Conseil Dép. / Fontaines</div>  </a>
 
 
 
@@ -57,12 +58,30 @@
 
 
 
+<div id="fknfooter-work"></div>
 
 
 
-<div id="footer">
-© 2021 Mykhailo Taranenko
-</div>
-<script src="../scripts/main.js"> </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+    <div id="footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
+</footer>
 </body>
 </html>
