--- a/html/work.html
+++ b/html/work.html
@@ -95,7 +95,7 @@ var a = (navigator.userAgent||navigator.vendor||window.opera);
 return false;
 }
 if(isMobile() === true) {
-    var question = confirm("Вы зашли с мобильного устройства. Хотите перейти на мобильную версию сайта?");
+    var question = confirm("Vous êtes connecté depuis un appareil mobile. Voulez-vous passer à la version mobile du site?");
 }
 
 if(question === true) {
