--- a/html/contact.html
+++ b/html/contact.html
@@ -43,7 +43,7 @@
 
     <div id="form"><div id="me-contacter">Me contacter:</div>
     <div id="form-form">
-        <form action="http://formspree.io/mikael.tar@outllok.com" method="post">
+        <form action="https://formspree.io/f/xyybbvww" method="post">
             <label for="name-contact"></label>
             <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Entrez votre nom/prénom" required> <br><br>
             <label for="contact"></label>
