--- a/mobile/mobile.contact.html
+++ b/mobile/mobile.contact.html
@@ -32,7 +32,7 @@
 </div>
 <div id="mobile-form">
 
-    <form action="../php/send.php" method="post">
+    <form action="https://formspree.io/f/xyybbvww" method="post">
             <label for="mobile-name-contact"></label>
             <input type="text"   id="mobile-name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Entrez votre nom/prénom" required> <br><br>
             <label for="mobile-contact"></label>
