--- a/html/contact.html
+++ b/html/contact.html
@@ -50,6 +50,7 @@
             <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Entrez votre numéro de tel. ou e-mail" required> <br><br>
              <label for="comment"></label>
             <textarea  style="font-family: Arial,sans-serif " id="comment" name="comment" cols="15" rows="10" placeholder="Commentaire:" required></textarea> <br><br>
+            <input type="hidden" name="_language" value="fr" />
             <input id="submit" type="submit" name="submit" value="Envoyer">
         </form>
     </div>
