--- a/mobile/mobile.contact.html
+++ b/mobile/mobile.contact.html
@@ -39,6 +39,7 @@
             <input type="text"  id="mobile-contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Entrez votre numéro de tel. ou e-mail" required> <br><br>
              <label for="mobile-comment"></label>
             <textarea  id="mobile-comment" name="comment" cols="15" rows="10" placeholder="Commentaire:" required></textarea> <br><br>
+        <input type="hidden" name="_language" value="fr" />
             <input id="mobile-submit" type="submit" name="submit" value="Envoyer">
         </form>
 </div>
