--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>CV</title>
+    <title>CV Taranenko</title>
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
