--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CV Taranenko</title>
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="images/link.pbg">
 </head>
 <body>
 <header>
