--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>CV Taranenko</title>
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="images/link.pbg">
+   
 </head>
 <body>
 <header>
      <a href="index.html" target="_self"><img id="computer" src="images/computer.png" alt="imgcomputer"></a>
     <a href="mobile/mobile-index.html" target="_self"><img id="phone" src="images/phone.png" alt="imgphone"></a>
     <div id="header">
-        <div id="name-surname-age"> <strong><span id="name">Mykhailo </span> <span id="surname">Taranenko</span><strong> <span id="age"> 25 ans</span>
+        <div id="name-surname-age"> <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
         </div>
         <div id="profession-links">
             <span id="profession">Électricien / câbleur </span>
