--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>CV Taranenko</title>
+    <title>CV</title>
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
-   
+    <link rel="icon" href="images/link.png">
 </head>
 <body>
 <header>
      <a href="index.html" target="_self"><img id="computer" src="images/computer.png" alt="imgcomputer"></a>
     <a href="mobile/mobile-index.html" target="_self"><img id="phone" src="images/phone.png" alt="imgphone"></a>
     <div id="header">
-        <div id="name-surname-age"> <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
+        <div id="name-surname-age"> <strong><span id="name">Mykhailo </span> <span id="surname">Taranenko</span></strong> <span id="age"> 25 ans</span>
         </div>
         <div id="profession-links">
             <span id="profession">Électricien / câbleur </span>
