--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <a href="index.html" target="_self"><img id="computer" src="images/computer.png" alt="imgcomputer"></a>
     <a href="mobile/mobile-index.html" target="_self"><img id="phone" src="images/phone.png" alt="imgphone"></a>
     <div id="header">
-        <div id="name-surname-age"> <strong><span id="name">Mykhailo </span> <span id="surname">Taranenko</span></strong> <span id="age"> 25 ans</span>
+        <div id="name-surname-age"><span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
         </div>
         <div id="profession-links">
             <span id="profession">Électricien / câbleur </span>
