--- a/html/cv.html
+++ b/html/cv.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Mon CV</title>
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="images/link.png">
 </head>
 <body>
 
