--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Me contacter</title>
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="images/link.png">
+    <link rel="icon" href="../images/link.png">
 </head>
 <body>
 
