--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
      <a href="index.html" target="_self"><img id="computer" src="images/computer.png" alt="imgcomputer"></a>
     <a href="mobile/mobile-index.html" target="_self"><img id="phone" src="images/phone.png" alt="imgphone"></a>
     <div id="header">
-        <div id="name-surname-age"><strong><span id="name">Mykhailo </span></strong> <strong><span id="surname">Taranenko</span></strong> <span id="age"> 25 ans</span>
+        <div id="name-surname-age"> <strong><span id="name">Mykhailo </span> <span id="surname">Taranenko</span></strong> <span id="age"> 25 ans</span>
         </div>
         <div id="profession-links">
             <span id="profession">Électricien / câbleur </span>
-            <div id="links">
+            <nav><div id="links">
                  <a class="links-header" href="index.html" target="_self">Principal</a>
                  <a class="links-header" href="html/cv.html" target="_self">CV</a>
                  <a class="links-header" href="html/work.html" target="_self">Mes travaux</a>
                  <a class="links-header" href="html/contact.html" target="_self">Me contacter</a>
             </div>
+                </nav>
         </div>
     </div>
 </header>
-<article>
+<main>
 
     <div id="intro">
     <img src="images/photo2.png" alt="my-photo">
@@ -49,7 +50,7 @@
         </div>
 
     </div>
-</article>
+</main>
 <footer>
     <div id="footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
 </footer>
