--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Me contacter</title>
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="../images/link.png">
 </head>
 <body>
 
@@ -12,22 +11,23 @@
     <a href="contact.html" target="_self"><img id="computer" src="../images/computer.png" alt="imgcomputer"></a>
     <a href="../mobile/mobile.contact.html" target="_self"><img id="phone" src="../images/phone.png" alt="imgphone"></a>
     <div id="header">
-        <div id="name-surname-age"> <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span>
-        </div>
+        <div id="name-surname-age"> <span id="name">Mykhailo </span> <span id="surname">Taranenko</span> <span id="age"> 25 ans</span></div>
         <div id="profession-links">
             <span id="profession">Électricien / câbleur </span>
-            <div id="links">
-                 <a class="links-header" href="../index.html" target="_self">Principal</a>
-                 <a class="links-header" href="cv.html" target="_self">CV</a>
-                 <a class="links-header" href="work.html" target="_self">Mes travaux</a>
-                 <a class="links-header" href="contact.html" target="_self">Me contacter</a>
-            </div>
+            <nav>
+                <div id="links">
+                    <a class="links-header" href="../index.html" target="_self">Principal</a>
+                    <a class="links-header" href="cv.html" target="_self">CV</a>
+                    <a class="links-header" href="work.html" target="_self">Mes travaux</a>
+                    <a class="links-header" href="contact.html" target="_self">Me contacter</a>
+                </div>
+            </nav>
         </div>
     </div>
 </header>
-<article>
 
-
+<main>
+<section>
 <div id="contact-contact">
     <div id="contact-text">Contacts</div>
     <div id="name-text">Mykhailo Taranenko</div>
@@ -35,13 +35,12 @@
     <div id="mail-tel-text"> E-mail: mikael.tar@outlook.com Tel: 07 53 51 52 21</div>
     <div id="images-text">
     <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="contact-img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a>
-
-    <a href="https://twitter.com/Mike67553859"> <img id="contact-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
+        <a href="https://twitter.com/Mike67553859"> <img id="contact-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
     </div>
 
 </div>
-
-
+</section>
+<section>
     <div id="form"><div id="me-contacter">Me contacter:</div>
     <div id="form-form">
         <form action="https://formspree.io/f/xyybbvww" method="post">
@@ -51,39 +50,16 @@
             <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Entrez votre numéro de tel. ou e-mail" required> <br><br>
              <label for="comment"></label>
             <textarea  style="font-family: Arial,sans-serif " id="comment" name="comment" cols="15" rows="10" placeholder="Commentaire:" required></textarea> <br><br>
-            <input type="hidden" name="_language" value="fr" />
+             <input type="hidden" name="_language" value="fr" />
             <input id="submit" type="submit" name="submit" value="Envoyer">
         </form>
     </div>
 
     </div>
 
+</section>
 
-
-
-
-
-
-
-
-
-
-</article>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</main>
 
 <footer>
     <div id="footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
