--- a/html/cv.html
+++ b/html/cv.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Mon CV</title>
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="../images/link.png">
 </head>
 <body>
 
@@ -16,15 +15,19 @@
         </div>
         <div id="profession-links">
             <span id="profession">Électricien / câbleur </span>
-            <div id="links">
+            <nav><div id="links">
                  <a class="links-header" href="../index.html" target="_self">Principal</a>
                  <a class="links-header" href="cv.html" target="_self">CV</a>
                  <a class="links-header" href="work.html" target="_self">Mes travaux</a>
                  <a class="links-header" href="contact.html" target="_self">Me contacter</a>
             </div>
+                </nav>
         </div>
     </div>
 </header>
+<main>
+
+    <section>
 <div id="cv-intro">
     <div id="cv-intro-block-left">
         <div id="cv-text">CV</div>
@@ -38,7 +41,8 @@
         <div id="telecharger"> <a id="link-cv-pdf" href="../images/CV-Taranenko.pdf" target="_blank">Télecharger le CV </a> </div>
     </div> <img id="cv-intro-photo" src="../images/photo2.png" alt="my-photo">
 </div>
-
+</section>
+    <section>
 <div id="cv-work-formation">
 <div class="cv-headers">Expériences professionnelles</div>
         <hr>
@@ -118,6 +122,8 @@
         <div class="cv-work-formation-normal-text">Delivrée par le lycée Val de Loire. Note moyenne 18/20</div>
 
 </div>
+    </section>
+    <section>
 <div id="permis-langues-competences">
 
    <div class="cv-headers" >Permis</div>
@@ -137,86 +143,68 @@
 <div class="cv-headers-2">Compétences</div>
         <hr>
     <div class="cv-permis-etc-normal-text">Autonomie</div>
-    <progress max="100" value="100"> </progress>
+        <progress max="100" value="100"> </progress>
 
-    <div class="cv-permis-etc-normal-text">Savoir lire un plan/ une schéma</div>
-    <progress max="100" value="100"> </progress>
+        <div class="cv-permis-etc-normal-text">Savoir lire un plan/ une schéma</div>
+        <progress max="100" value="100"> </progress>
 
-    <div class="cv-permis-etc-normal-text"> Fixer et raccorder les equipement basse ténsion</div>
-    <progress max="100" value="100"> </progress>
+        <div class="cv-permis-etc-normal-text"> Fixer et raccorder les equipement basse ténsion</div>
+        <progress max="100" value="100"> </progress>
 
-    <div class="cv-permis-etc-normal-text">Positionner en cabler une armoire électrique ou un tableau</div>
+        <div class="cv-permis-etc-normal-text">Positionner en cabler une armoire électrique ou un tableau</div>
 
-    <progress max="100" value="100"> </progress>
+        <progress max="100" value="100"> </progress>
 
-    <div class="cv-permis-etc-normal-text">Positionner en cabler une armoire électrique industrielle</div>
-    <progress max="100" value="90"> </progress>
+        <div class="cv-permis-etc-normal-text">Positionner en cabler une armoire électrique industrielle</div>
+        <progress max="100" value="90"> </progress>
 
-    <div class="cv-permis-etc-normal-text">Raccorder des càbles d'équipement électriques industrielles</div>
-    <progress max="100" value="90"> </progress>
+        <div class="cv-permis-etc-normal-text">Raccorder des càbles d'équipement électriques industrielles</div>
+        <progress max="100" value="90"> </progress>
 
-    <div class="cv-permis-etc-normal-text">  Chemin de càbles et conduits électriques </div>
-    <progress max="100" value="95"> </progress>
+        <div class="cv-permis-etc-normal-text">  Chemin de càbles et conduits électriques </div>
+        <progress max="100" value="95"> </progress>
 
-    <div class="cv-permis-etc-normal-text"> Realiser des saignées ou des supports pour les càbles </div>
-    <progress max="100" value="100"> </progress>
+        <div class="cv-permis-etc-normal-text"> Realiser des saignées ou des supports pour les càbles </div>
+        <progress max="100" value="100"> </progress>
 
-    <div class="cv-permis-etc-normal-text">  Installer et raccorder des équipement TBT </div>
-    <progress max="100" value="95"> </progress>
+        <div class="cv-permis-etc-normal-text">  Installer et raccorder des équipement TBT </div>
+        <progress max="100" value="95"> </progress>
 
-    <div class="cv-permis-etc-normal-text"> Utilisation d'appareils de mesures électriques </div>
-    <progress max="100" value="100"> </progress>
+        <div class="cv-permis-etc-normal-text"> Utilisation d'appareils de mesures électriques </div>
+        <progress max="100" value="100"> </progress>
 
-    <div class="cv-permis-etc-normal-text">  Effectuer des travaux simple en maçonnerie </div>
-    <progress max="100" value="70"> </progress>
+        <div class="cv-permis-etc-normal-text">  Effectuer des travaux simple en maçonnerie </div>
+        <progress max="100" value="70"> </progress>
 </div>
 
-<div id="cv-download-footer"> <a id="cv-pdf-footer" href="../images/CV-Taranenko.pdf" target="_blank"> Télecharger le CV</a> </div>
-<div id="fknfooter-cv"></div>
+    <div id="cv-download-footer"> <a id="cv-pdf-footer" href="../images/CV-Taranenko.pdf" target="_blank"> Télecharger le CV</a> </div>
+        </section>
 
+    <div id="fknfooter-cv"></div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</main>
 
 <footer>
     <div id="footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
 </footer>
-<script> function isMobile() {
 
-var a = (navigator.userAgent||navigator.vendor||window.opera);
-    if(/android.+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od|ad)|iris|kindle|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(di|rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))){
-    return true;
-    }
+<script>
+  function isMobile() {
 
-return false;
-}
-if(isMobile() === true) {
-    var question = confirm("Vous êtes connecté depuis un appareil mobile. Voulez-vous passer à la version mobile du site?");
-}
+        var a = (navigator.userAgent||navigator.vendor||window.opera);
+        if(/android.+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od|ad)|iris|kindle|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(di|rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))){
+        return true;
+         }
 
-if(question === true) {
-    window.location  = '../mobile/mobile-index.html';
-}</script>
+        return false;
+        }
+        if(isMobile() === true) {
+        var question = confirm("Vous êtes connecté depuis un appareil mobile. Voulez-vous passer à la version mobile du site?");
+        }
+
+        if(question === true) {
+         window.location  = '../mobile/mobile-index.html';
+        }
+</script>
 </body>
 </html>
