--- a/mobile/mobile-index.html
+++ b/mobile/mobile-index.html
@@ -5,41 +5,25 @@
     <title>CV</title>
 
 <link rel="stylesheet" media="all and (orientation:portrait)" href="../styles/styles-mobile-portrait.css">
-<link rel="stylesheet" media="all and (orientation:landscape)" href="../styles/styles-mobile-lanscape.css">
+<link rel="stylesheet" media="all and (min-width: 700px) and (orientation:landscape)" href="../styles/styles-mobile-lanscape.css">
 
 </head>
 <img >
 <a href="../index.html" target="_self"><img id="mobile-computer" src="../images/computer.png" alt="imgcomputer"></a>
 <a href="mobile-index.html" target="_self"><img id="mobile-phone" src="../images/phone.png" alt="imgphone"></a>
-<div id="mobile-header">
+<header><div id="mobile-header">
     <div id="mobile-name-surname"> <span id="mobile-name">Mykhailo</span> <span id="mobile-surname">Taranenko</span>  </div>
     <div id="mobile-profession">Électricien / câbleur</div>
     <div id="mobile-age">25 ans</div>
-    <div id="block-header-links"><div class="links-header"><a href="mobile-index.html" target="_self">Principal</a> </div>
+    <nav><div id="block-header-links"><div class="links-header"><a href="mobile-index.html" target="_self">Principal</a> </div>
                            <div class="links-header"><a href="mobile-cv.html" target="_self"> CV</a></div>
                              <div class="links-header"><a href="mobile-work.html" target="_self">Mes travaux</a></div>
                              <div class="links-header"><a href="mobile.contact.html" target="_self">Me contacter</a></div>
     </div>
+    </nav>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</header>
+<main>
 <div id="mobile-index-intro">
     <img src="../images/photo2.png" alt="my-photo">
     <div id="mobile-index-intro-text">
@@ -64,7 +48,10 @@
     <div id="mobile-intro-link-cv"><a id="mobile-intro-link-cv-link" href="mobile-cv.html" target="_self">Mon CV</a></div>
 
 </div>
+    </main>
 <div id="mobile-fkn-footer-index"></div>
+<footer>
 <div id="mobile-footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
+    </footer>
 </body>
 </html>
