--- a/mobile/mobile-work.html
+++ b/mobile/mobile-work.html
@@ -9,16 +9,19 @@
 <body>
 <a href="../html/work.html" target="_self"><img id="mobile-computer" src="../images/computer.png" alt="imgcomputer"></a>
 <a href="mobile-work.html" target="_self"><img id="mobile-phone" src="../images/phone.png" alt="imgphone"></a>
-<div id="mobile-header">
+<header><div id="mobile-header">
     <div id="mobile-name-surname"> <span id="mobile-name">Mykhailo</span> <span id="mobile-surname">Taranenko</span>  </div>
     <div id="mobile-profession">Électricien / câbleur</div>
     <div id="mobile-age">25 ans</div>
-    <div id="block-header-links"><div class="links-header"><a href="mobile-index.html" target="_self">Principal</a> </div>
+    <nav><div id="block-header-links"><div class="links-header"><a href="mobile-index.html" target="_self">Principal</a> </div>
                            <div class="links-header"><a href="mobile-cv.html" target="_self"> CV</a></div>
                              <div class="links-header"><a href="mobile-work.html" target="_self">Mes travaux</a></div>
                              <div class="links-header"><a href="mobile.contact.html" target="_self">Me contacter</a></div>
     </div>
+    </nav>
 </div>
+</header>
+<main>
 <div id="mobile-travaux-main-block">
 <div id="first-name">Batiment Hermoine / 2 lions</div>
 <a href="../images/cegelec-6.png" target="_blank"><div id="first-work"> <img  src="../images/cegelec-6.png" alt="cegelec"> </div></a>
@@ -33,6 +36,8 @@
 <div id="sixth-name">Conseil Dép. / Fontaines</div>
 <a href="../images/baie.png" target="_blank"><div id="sixth-work"><img src="../images/baie.png" alt="baie"></div></a>
 </div>
-<div id="mobile-footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
+    </main>
+<footer><div id="mobile-footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div></footer>
+
 </body>
 </html>
