--- a/mobile/mobile-cv.html
+++ b/mobile/mobile-cv.html
@@ -6,20 +6,24 @@
     <link rel="stylesheet" media="all and (orientation:portrait)" href="../styles/styles-mobile-portrait.css">
 <link rel="stylesheet" media="all and (orientation:landscape)" href="../styles/styles-mobile-lanscape.css">
 </head>
+<style>
+</style>
 <body>
 <a href="../html/cv.html" target="_self"><img id="mobile-computer" src="../images/computer.png" alt="imgcomputer"></a>
 <a href="mobile-cv.html" target="_self"><img id="mobile-phone" src="../images/phone.png" alt="imgphone"></a>
-<div id="mobile-header">
+<header><div id="mobile-header">
     <div id="mobile-name-surname"> <span id="mobile-name">Mykhailo</span> <span id="mobile-surname">Taranenko</span>  </div>
     <div id="mobile-profession">Électricien / câbleur</div>
     <div id="mobile-age">25 ans</div>
-    <div id="block-header-links"><div class="links-header"><a href="mobile-index.html" target="_self">Principal</a> </div>
+    <nav><div id="block-header-links"><div class="links-header"><a href="mobile-index.html" target="_self">Principal</a> </div>
                            <div class="links-header"><a href="mobile-cv.html" target="_self"> CV</a></div>
                              <div class="links-header"><a href="mobile-work.html" target="_self">Mes travaux</a></div>
                              <div class="links-header"><a href="mobile.contact.html" target="_self">Me contacter</a></div>
     </div>
+    </nav>
 </div>
-
+</header>
+<main>
 <div id="mobile-cv-main">
 
 <div id="mobile-cv-intro-1st-block">
@@ -29,8 +33,8 @@
         <div id="mobile-cv-adress-text"> 2 rue Charles de Foucauld, <br> 37200, Tours</div>
         <div id="mobile-cv-tel-mail-text">E-mail: mikael.tar@outlook.com <br>Tel: 07 53 51 52 21</div>
         <div id="mobile-cv-images-links">
-            <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="mobile-img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a>
-            <a href="https://twitter.com/Mike67553859"> <img id="mobile-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
+            <a href="https://www.linkedin.com/in/mikaeltar/"> <img id="mobile-cv-img-linkedin" src="../images/linkedin.png" alt="linkedin"> </a>
+            <a href="https://twitter.com/Mike67553859"> <img id="mobile-cv-img-twitter" src="../images/twitter.png" alt="twitter">   </a>
         </div>
     <div id="mobile-cv-link-pdf-top"> <a id="link-cv-top" href="../images/CV-Taranenko.pdf" target="_blank">Télecharger le CV</a> </div>
 </div>
@@ -171,16 +175,11 @@
 
     <div id="mobile-cv-telecharger-cv-footer"><a id="mobile-cv-pdf" href="../images/CV-Taranenko.pdf" target="_blank"> Télecharger le CV</a> </div>
 
-
-
-
-
-
-
-
-
 </div>
+    </main>
 <div id="mobile-fkn-footer-cv"></div>
+<footer>
 <div id="mobile-footer"><span style="font-size: 1.2vh">© 2021 Mykhailo Taranenko</span></div>
+    </footer>
 </body>
 </html>
