--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Taranenko Mykhailo CV Tours">
     <title>CV</title>
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="images/link.png">
