--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Taranenko Mykhailo CV Tours">
+     <meta name="keywords" content="Electricien experience Mykhailo Taranenko CV Tours cableur">
     <title>CV</title>
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="images/link.png">
