--- a/cv-traducteur/index.html
+++ b/cv-traducteur/index.html
@@ -1,1 +1,56 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title>Перекладач французскої</title>
+      <link href="styles/index.css" rel="stylesheet" type="text/css">
+   </head>
+   <body>
+      <div class="container">
+         <div class="up-header">
+            <ul>
+               <li> <a href="index.html"> Українська</a></li>
+               <li><a href="html/index-rus.html"> Русский</a></li>
+               <li><a href="html/index-fr.html"> Français</a></li>
+            </ul>
+         </div>
+         <div class="header">
+            <div class="name">Михаило</div>
+            <div class="surname">Тараненко</div>
+            <div class="age">25 років</div>
+            <div class="profession">Перекладач французської мови</div>
+            <div class="links">  <a href="index.html" target="_self">Головна</a>
+               <a href="html/contact.html" target="_self">Контакти</a>
+            </div>
+         </div>
+         <div class="content">
+            <div class="intro-image"> <img src="images/photo.png" alt="photo"> </div>
+            <div class="intro-text">
+               <span class="bigger">10 років</span><span class="big"> живу у Франції</span> <br><br> З 2010 року працюю та живу у Франції, отримав вищу технічну освіту у Європейскому вузі.
+               Маю величезний досвід спілкування з носіями французької мови. Проживаю у регіоні Centre (найчистiша французька вимова).
+               <p>Володію писемною та розмовною французською на високому рівні (як рідна); англійська - на достатньому рівні.</p>
+               <p> Вивчаю веб-програмування. Знаю HTML, CSS (Grid, Flex) Bootstrap, препроцесор SASS. Базові знання Javascript. </P>
+            </div>
+            <div class="intro-info">
+               <div class="intro-info-main">Сфери діяльності:</div>
+               <div class="intro-info-text">
+                  <ul>
+                     <li>Переклад текстів будь-якої складності</li>
+                     <li>Технічний переклад</li>
+                     <li>Юридичний переклад</li>
+                     <li>Спілкування з клієнтами (усно та письмово)</li>
+                  </ul>
+               </div>
+               <div class="intro-info-main">Телефон:</div>
+               <div class="intro-info-text">(+380)99 430 20 93 <br> (+380)73 445 86 67(Viber)</div>
+               <div class="intro-info-main">Email:</div>
+               <div class="intro-info-text">taranenko.mykhailo@gmail.com</div>
+               <div class="intro-info-main">Соц. мережі:</div>
+               <div class="link-images"><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="images/twitter.png" alt="twitter"></a>
+               </div>
+            </div>
+         </div>
+         <div class="footer" > © 2021 Mykhailo Taranenko</div>
+      </div>
+   </body>
+</html>
