--- a/cv-traducteur/html/index-fr.html
+++ b/cv-traducteur/html/index-fr.html
@@ -1,1 +1,57 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title>Traducteur français</title>
+      <link href="../styles/index.css" rel="stylesheet" type="text/css">
+   </head>
+   <body>
+      <div class="container">
+         <div class="up-header">
+            <ul>
+               <li> <a href="../index.html"> Українська</a></li>
+               <li><a href="index-rus.html"> Русский</a></li>
+               <li><a href="index-fr.html"> Français</a></li>
+            </ul>
+         </div>
+         <div class="header">
+            <div class="name">Mykhailo</div>
+            <div class="surname">Taranenko</div>
+            <div class="age">25 ans</div>
+            <div class="profession">Traducteur français</div>
+            <div class="links">  <a href="index-fr.html" target="_self">Principal</a>
+               <a href="contact-fr.html" target="_self">Contacts</a>
+            </div>
+         </div>
+         <div class="content">
+            <div class="intro-image"> <img src="../images/photo.png" alt="photo"> </div>
+            <div class="intro-text">
+               <span class="bigger">Depuis 10 ans</span><span class="big"> je vis en France</span> <br><br>En 2010 je suis arrivé en France, depuis je vis et travaille  France.
+               j'ai suivi une formation technique supérieure à l'Université européenne.
+               J'ai une grande expérience de la communication avec des francophones. Je vis dans la région Centre (la prononciation française la plus pure).
+               <p>Maîtrise du français écrit et parlé de haut niveau (en tant que natif); Anglais - à un niveau suffisant.</p>
+               <p>J'étudie la programmation Web. Je connais HTML, CSS (Grid, Flex) Bootstrap, préprocesseur SASS. Connaissance de base de Javascript.</p>
+            </div>
+            <div class="intro-info">
+               <div class="intro-info-main">Secteur d'activité:</div>
+               <div class="intro-info-text">
+                  <ul>
+                     <li>Traduction de textes de toute complexité</li>
+                     <li>Traduction technique</li>
+                     <li>Traduction juridique</li>
+                     <li>Communication avec les clients (oral et par écrit)</li>
+                  </ul>
+               </div>
+               <div class="intro-info-main">Tel:</div>
+               <div class="intro-info-text">(+380)99 430 20 93 <br> (+380)73 445 86 67(Viber)</div>
+               <div class="intro-info-main">Email:</div>
+               <div class="intro-info-text">taranenko.mykhailo@gmail.com</div>
+               <div class="intro-info-main">Réseaux sociaux:</div>
+               <div class="link-images"><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a>
+               </div>
+            </div>
+         </div>
+         <div class="footer" > © 2021 Mykhailo Taranenko</div>
+      </div>
+   </body>
+</html>
