add link tel and email

--- a/cv-traducteur/html/contact-fr.html
+++ b/cv-traducteur/html/contact-fr.html
@@ -28,8 +28,8 @@
                <div>Contacts</div>
                <div>Mykhailo Taranenko</div>
                <div>Kherson</div>
-               <div><span class="contact-info-color">Email: </span> taranenko.mykhailo@gmail.com</div>
-               <div><span class="contact-info-color">Tel: </span> (+380)99 430 20 93 <br> (+380)73 445 86 67(Viber)</div>
+               <div><span class="contact-info-color">Email: </span> <a href="mailto:taranenko.mykhailo@gmail.com">taranenko.mykhailo@gmail.com</a> </div>
+               <div><span class="contact-info-color">Tel: </span> <a href="tel:+380994302093">(+380)99 430 20 93</a>  <br> <a href="tel:+380734458667">(+380)73 445 86 67(Viber)</a> </div>
                <div><a href="https://www.linkedin.com/" target="_blank"><img  id="link-linkedin" src="../images/linkedin.png" alt="linkedin"></a> <a href="https://twitter.com/Mike67553859" target="_blank"><img id="link-twitter" src="../images/twitter.png" alt="twitter"></a></div>
             </div>
             <div class="contact-form">
