--- a/cv-traducteur/index.html
+++ b/cv-traducteur/index.html
@@ -15,7 +15,7 @@
             </ul>
          </div>
          <div class="header">
-            <div class="name">Михаило</div>
+            <div class="name">Михайло</div>
             <div class="surname">Тараненко</div>
             <div class="age">25 років</div>
             <div class="profession">Перекладач французської мови</div>
