--- a/cv-traducteur/html/contact-fr.html
+++ b/cv-traducteur/html/contact-fr.html
@@ -34,7 +34,7 @@
             </div>
             <div class="contact-form">
                <div>Me contacter:</div>
-               <form action="" method="post">
+               <form action="https://formspree.io/f/xyybbvww" method="post">
                   <label for="name-contact"></label>
                   <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Entrez votre nom/prénom:" required> <br><br>
                   <label for="contact"></label>
