--- a/cv-traducteur/html/contact-rus.html
+++ b/cv-traducteur/html/contact-rus.html
@@ -34,14 +34,14 @@
             </div>
             <div class="contact-form">
                <div>Напишите мне, буду рад сотрудничеству:</div>
-               <form action="" method="post">
+               <form action="https://formspree.io/f/xyybbvww" method="post">
                   <label for="name-contact"></label>
                   <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Введите Ваше имя/фамилию" required> <br><br>
                   <label for="contact"></label>
                   <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Введите ваш номер телефона и/или email" required> <br><br>
                   <label for="comment"></label>
                   <textarea  style="font-family: Arial,sans-serif " id="comment" name="comment" cols="15" rows="10" placeholder="Комментарий" required></textarea> <br><br>
-                  <input type="hidden" name="_language" value="fr" />
+                  <input type="hidden" name="_language" value="ru" />
                   <input id="submit" type="submit" name="submit" value="Отправить">
                </form>
             </div>
