--- a/cv-traducteur/html/contact.html
+++ b/cv-traducteur/html/contact.html
@@ -34,14 +34,14 @@
             </div>
             <div class="contact-form">
                <div>Напишіть мені, буду рад співпраці:</div>
-               <form action="" method="post">
+               <form action="https://formspree.io/f/xyybbvww" method="post">
                   <label for="name-contact"></label>
                   <input type="text"   id="name-contact" name = 'name-contact'  maxlength="50" value="" placeholder="Введіть Ваше ім'я / прізвище" required> <br><br>
                   <label for="contact"></label>
                   <input type="text"  id="contact" name = 'mail-or-tel-contact'  maxlength="50" value="" placeholder="Введіть ваш номер телефону та / або email" required> <br><br>
                   <label for="comment"></label>
                   <textarea  style="font-family: Arial,sans-serif " id="comment" name="comment" cols="15" rows="10" placeholder="Коментарiй" required></textarea> <br><br>
-                  <input type="hidden" name="_language" value="fr" />
+                  <input type="hidden" name="_language" value="uk" />
                   <input id="submit" type="submit" name="submit" value="Відправити">
                </form>
             </div>
